Merge service binding parameters in depth